--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Cart">
+    tools:context="com.example.lottoecommrceapp.Cart">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/checkout_recycler_view"
