--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,20 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".HomeActivity"
+    tools:context="com.example.lottoecommrceapp.HomeActivity"
     android:background="#f8f9f8"
     android:id="@+id/drawer"
     tools:openDrawer="start"
     android:fitsSystemWindows="true"
 
     >
-<ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+
     <include
         layout="@layout/app_toolbar"
         />
-</ScrollView>
+
 
 
 
